# lecture-graph-db

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/prompts/: cypher_gen.py  extraction.py
backend/app/routers/: analysis.py  ask.py  extract.py  graph.py
backend/checkpoints/session3_complete/app/: main.py  models.py
backend/checkpoints/session5_complete/app/: main.py
backend/checkpoints/session5_complete/app/routers/: samples.py
backend/checkpoints/session6_complete/app/: main.py
backend/checkpoints/session6_complete/app/prompts/: cypher_gen.py
backend/checkpoints/session6_complete/app/routers/: graph.py
backend/checkpoints/session7_complete/app/: database.py  main.py
backend/checkpoints/session7_complete/app/prompts/: extraction.py
backend/checkpoints/session7_complete/app/routers/: ask.py  extract.py
backend/data/documents/: doc1_witness_statement.txt  doc2_call_records.txt  doc3_financial_report.txt  doc4_cctv_analysis.txt  doc5_vehicle_lookup.txt  doc6_victim_inquiry.txt  doc7_digital_forensics.txt  doc8_insurance_lookup.txt  doc9_immigration_record.txt  index.json
docs/: curriculum.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/components/AnalysisDashboard/: AnalysisDashboard.tsx
frontend/src/components/DocumentAnalyzer/: DocumentAnalyzer.tsx
frontend/src/components/GraphViewer/: GraphViewer.tsx  NodeForm.tsx  NodePanel.tsx
frontend/src/lib/: api.ts
(+1 files in other folders)
